--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!--Fontawesome-->
+    <script src="https://kit.fontawesome.com/6b35d3bbe2.js" crossorigin="anonymous"></script> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
